[project]
name = "pychapa"
version = "0.1.0"
description = "Asyncnous chapa python client"
readme = "README.md"
authors = [
    { name = "zix", email = "zix@fedora.local" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
pychapa = "pychapa:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
